2009-05-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c:
   Fix broken menu item "Default".


2009-04-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c, src/scplugin.c, src/gui.h:
   List the available languages in the Tools menu as radio items
   to easily indicate which language is currently in use.
   Show the default language also next to the 'Default' menu item.
   Show the currently used language in the toolbutton tooltip.


2009-03-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * New release: Spell Check 0.3.


2009-02-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c, src/gui.h, src/scplugin.c, src/scplugin.h, src/speller.c,
   src/speller.h:
   Revert back the changes to use the "editor-notify" signal as it
   makes things worse than before. Instead use the old code to connect
   to the global "key-press-event" signal but reduce the delay
   to half a second to make checking while typing smoother.


2009-02-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * Makefile.am:
   Fix 'make distcheck' by uninstalling documentation files.


2009-02-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c, src/gui.h, src/scplugin.c, src/scplugin.h, src/speller.c,
   src/speller.h:
   Use the "editor-notify" signal to catch text modifications for
   checking while typing. Also remove the timeout which never worked
   as intended.
   Don't add suggestions to the messages window when checking while
   typing.
   These changes should increase the usability and accuracy of the
   'check while typing' feature while not being much slower (if ever).
 * src/gui.c, src/scplugin.c, src/scplugin.h:
   Display accelerator on the 'Default' menu item.
 * src/gui.c, src/gui.h, src/scplugin.c, src/scplugin.h, src/speller.c,
   src/speller.h:
   Prefix all non-static functions which sc_ to avoid symbol clashes.
 * src/speller.c:
   Synchronise lexer checks with Geany's new filetypes.

