@@ -1,3 +1,10 @@
+2009-05-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/gui.c, src/scplugin.c, src/gui.h:
+   Update the label of the "Default" menu item if the default language
+   has been changed.
+
+
 2009-05-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/gui.c:
